fix: game width on iOS

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ h1 {
    flex: 1;
    position: relative;
    aspect-ratio: 4 / 3;
+   width: 100%;
 }
 
 .gameFrame canvas {
